added https support but accidently made it required

--- a/.zero-http/config.json
+++ b/.zero-http/config.json
@@ -1,5 +1,10 @@
 {
-  "server": {
+  "http": {
     "port": 8000
+  },
+  "https": {
+    "port": 8443,
+    "certFile": "zero-http.crt",
+    "keyFile": "zero-http.key"
   }
 }
