actually check before running https and cleanup

--- a/.zero-http/config.json
+++ b/.zero-http/config.json
@@ -4,7 +4,7 @@
   },
   "https": {
     "port": 8443,
-    "certFile": "zero-http.crt",
+    "certFile": "zero-http.pem",
     "keyFile": "zero-http.key"
   }
 }
