--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -34,5 +34,5 @@
   version = "1.0.2"
 
 [[constraint]]
-  name = "github.com/spf13/pflag"
-  version = "1.0.0"
+  name = "github.com/phayes/freeport"
+  version = "1.0.2"
